--- a/free-nodes/page-28.htm
+++ b/free-nodes/page-28.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-03-01">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/b689047df3c43c67dc5627978a2159c3.webp" alt="3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-3-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月1日22.5M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了欧洲、香港、韩国、新加坡、加拿大、日本、美国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-02-29">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-2-29-clash-node.htm" class="xcblog-blog-url">
@@ -133,16 +147,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-11-17-free-ssr-node.htm" title="11月17日→21.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐">11月17日→21.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-21-clash-windows.htm" title="3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-15-node-share-links.htm" title="6月15日→19.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">6月15日→19.5M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-24-free-node-subscribe.htm" title="10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐">10月24日→19.9M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-14-clash-node-daily-updates.htm" title="8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-30-clash-node.htm" title="9月30日→21.9M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">9月30日→21.9M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-1-clash-node.htm" title="4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-14-free-clash.htm" title="4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接">4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-11-clash-windows.htm" title="8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月11日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-3-clash-v2ray-ss-ssr.htm" title="11月3日→18.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐">11月3日→18.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-24-free-subscribe-node.htm" title="11月24日→20.7M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月24日→20.7M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-28-free-subscribe-node.htm" title="8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">8月28日→19.9M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-4-free-ssr-subscribe.htm" title="11月4日→21.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">11月4日→21.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-7-free-subscribe-node.htm" title="5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-14-free-subscribe-node.htm" title="9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月14日→20.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-13-free-clash.htm" title="4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-2-free-high-speed-nodes.htm" title="10月2日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">10月2日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-26-free-v2ray.htm" title="9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-19-free-node-subscribe.htm" title="4月19日→20M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接">4月19日→20M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -154,7 +168,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
